Fix template dialog parameter padding on mobile
In the mobile view, parameters don't have left padding so some styles
should only be applied to the desktop stylesheet.

Bug: T304167

--- a/modules/ve-mw/ui/styles/pages/ve.ui.MWParameterPage-default.css
+++ b/modules/ve-mw/ui/styles/pages/ve.ui.MWParameterPage-default.css
@@ -90,6 +90,17 @@
 	padding-bottom: 2em;
 }
 
+/* FIXME remove when sidebar feature flag is gone T303386 */
+.ve-ui-mwParameterPage-inlineDescription {
+	padding-left: 2.5em;
+	padding-right: 2.5em;
+}
+
+/* Temporary style while inline description is deployed without the new sidebar */
+.ve-ui-mwParameterPage-inlineDescription > .ve-ui-expandableContent-container {
+	right: 2.5em;
+}
+
 .ve-ui-mwParameterPage .oo-ui-textInputWidget {
 	display: inline-block;
 	vertical-align: top;
